# zs-parser

./: .gitignore  BUILD.md  README.md  build.sh  index.html  install.sh  main.js  main.py  output.json  package.json  preload.js  pyproject.toml  renderer.js  run.sh  styles.css  test_format_consistency.py  zsParserGuiLauncher.sh  zs_parser_gui_setup.py
src/zs_parser/: main.py  tools.py
