[project]
name = "zs-parser"
version = "0.2.1"
description = "Parse data from Zeeshuimer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "jsonpath-ng>=1.7.0",
    "ndjson>=0.3.1",
    "orjson>=3.11.2",
]


[project.scripts]
zs-parser = "zs_parser.main:main"
